--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
 /*header*/
 
 .header {
-    background-image: url(/img/header-bg.png);
+    background-image: url(img/header-bg.png);
     background-repeat: no-repeat;
     min-height: 800px;
     max-width: 100%;
@@ -87,7 +87,7 @@ body {
     right: 0;
     display: flex;
     align-items: center;
-    background-image: url(/img/header-bg.png);
+    background-image: url(img/header-bg.png);
     background-size: 100%;
     z-index: 1000;
     justify-content: center;
@@ -378,7 +378,7 @@ body {
 /*Container-reservation*/
 
 .container-reservation {
-    background-image: url(/img/bg-reservation.png) ;
+    background-image: url(img/bg-reservation.png) ;
     background-repeat: no-repeat;
     background-size: 100%;
     min-height: 357px;
@@ -494,7 +494,7 @@ body {
 /*Section-menu*/
 
 .bg-conteiner-menu {
-    background-image: url(/img/bg-menu.png);
+    background-image: url(img/bg-menu.png);
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -550,7 +550,7 @@ body {
 }
 
 .slider-dish-price {
-    background-image: url(/img/slider-item.png);
+    background-image: url(img/slider-item.png);
     background-repeat: no-repeat;
     width: 225px;
     height: 225px;
@@ -794,7 +794,7 @@ body {
 }
 
 .footer {
-    background-image: url(/img/bg-footor.png) ;
+    background-image: url(img/bg-footor.png) ;
     background-repeat: no-repeat;
     min-height: 732px;
     -webkit-background-size: cover;
